# editor

./: .gitignore  .scalafix.conf  BACKLOG.md  CHANGELOG.md  README.md  RUNBOOK.md  build.sbt  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
.github/workflows/: android.yml  build.yml  cloudflare-pages.yml  desktop.yml
android/: .gitignore  RELEASING.md  build-android.sh  build.gradle  settings.gradle
android/app/: build.gradle  (+2 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  menu_shortcuts.rs
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
fdroid/: README.md  art.tessell.editor.yml  io.github.scala_tessella.editor.yml
project/: plugins.sbt
public/: PolygonPaletteStyles.css  _headers  site.webmanifest
scripts/: sync-version.mjs
styles/: AboutPopup.css  AppShell.css  CanvasNodeLabelStyles.css  ColorPicker.css  DarkModeThemeStyles.css  EditorLayout.css  EmptyStateCard.css  ErrorMessageStyles.css  FirstRunOverlay.css  ForcedColors.css  GlobalStyles.css  LightModeThemeStyles.css  LoadingIndicator.css  MenuBarStyles.css  MobileBottomToolbar.css  ModeBadge.css  Motion.css  PolygonPaletteStyles.css  Print.css  RecentFiles.css  ResponsiveDesignMediaQueries.css  SettingsPopup.css  StatusRow.css  TemplateGallery.css  TilingControlsStyles.css  TilingInfoPanel.css  TilingStatusStyles.css  Tokens.css  UnsavedChangesPopup.css  UpdateAvailableBanner.css  ZoomRotation.css
(+370 files in other folders)
