[package]
name = "tessella-editor-desktop"
version = "0.4.2"
description = "Tessella Editor desktop shell"
authors = ["Mario Càllisto"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tessella_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
